<resources>
    <string name="app_name">Suric\'app</string>
    <string name="menu_name">Menu</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- General text -->
    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <!--String pour la vue Map-->
    <string name="erreur_map">Error creating google Maps</string>
    <string name="here">Your Position</string>

    <!--Activity_categories-->

    <!-- Text activity inscription 2 -->
    <string name="centre_interet_">Centre d\'intérêt :</string>
    <string name="centre_interet">Centre d\'intérêt</string>
    <string name="show_message_around">Afficher les messages dans un rayon de :</string>
    <string name="terminer">Terminer</string>

    <!-- Text activity inscription -->
    <string name="inscrivez_vous">Subscribe</string>
    <string name="pseudo_">Login :</string>
    <string name="mail_"> Email :</string>
    <string name="photo_">Photo :</string>
    <string name="photo">Photo</string>
    <string name="ville_">City :</string>
    <string name="date_naissance_">Birthday :</string>
    <string name="mot_de_passe_">Password :</string>
    <string name="confirmation_">Confirmation :</string>
    <string name="pseudo">Login</string>
    <string name="mail"> Email</string>
    <string name="ville">City</string>
    <string name="date_naissance">Birthday</string>
    <string name="mot_de_passe">Password</string>
    <string name="confirmation">Confirmation</string>
    <string name="etape_suivante">Next step</string>
    <string name="differentPwd">Mot de passe différent !</string>
    <string name="differentPwd_desc">Les mots de passes doivent être identiques !</string>
    <string name="bad_email">Adresse email incorrecte !</string>
    <string name="bad_email_desc">L\'adresse email doit être de la forme suivante exemple@exemple.fr.</string>
    <string name="champs_requis">Tous les champs sont requis !</string>
    <string name="champs_requis_desc">Veuillez renseigner tous les champs pour continuer.</string>
    <string name="bad_password">Mot de passe incorrect !</string>
    <string name="bad_password_desc">Le mot de passe doit contenir 6 caractères, une minuscule, une majuscule et un chiffre.</string>
    <string name="pseudo_used">Pseudo déjà utilisé !</string>
    <string name="pseudo_used_desc">Le pseudo que vous avez rentré est déjà utilisé.</string>
    <string name="email_used">Email déjà utilisé !</string>
    <string name="email_used_desc">L\'adresse email que vous avez rentré est déjà utilisé.</string>
    <string name="photo_method">Prendre une photo ?</string>
    <string name="photo_method_desc">Voulez vous prendre une photo ou en choisir une dans la galerie ?</string>
    <string name="galerie">Galerie</string>
    <string name="take_a_picture">Prendre une photo</string>
    <string name="picture_saved">Picture saved !</string>
    <string name="user_saved">User saved !</string>

    <!-- Activity Connexion -->
    <string name="mdp_login_missing">Veuillez remplir les champs identifiant et mot de passe !</string>
    <string name="bad_mdp_login">Identifiant ou mot de passe incorrect</string>
    <string name="erreur">Erreur !</string>
    <string name="commentaire_empty">Attention votre commentaire est vide.</string>
    <string name="login_progress_signing_in">Connexion&#8230;</string>


    <!-- Activity write message -->
    <string name="ecrire_message">Ecrire un nouveau message</string>
    <string name="votre_message_">Votre message :</string>
    <string name="votre_message">Votre message</string>
    <string name="categories_choice">Catégorie(s) associée(s) :</string>
    <string name="transport">Transport</string>
    <string name="rencontre">Rencontre</string>
    <string name="co_voiturage">Co-voiturage</string>
    <string name="autorites">Autorités</string>
    <string name="evenement">Evènement</string>
    <string name="promotion">Promotion</string>
    <string name="titre">Titre</string>
    <string name="titre_">Titre :</string>
    <string name="send">Send</string>
    <string name="no_category_choose">Vous devez chosir au moins une catégorie !</string>
    <string name="titre_trop_long">Titre trop long ! </string>
    <string name="titre_trop_long_desc">Le Titre ne doit pas faire plus de 60 caractères.</string>
    <string name="message_trop_long">Message trop long ! </string>
    <string name="message_trop_long_desc">Le message ne doit pas faire plus de 150 caractères.</string>
    <string name="message_saved">Post saved !</string>
    <string name="comment_saved">Comment saved !</string>
    <string name="gps_desactive">"Your GPS seems to be disabled, do you want to enable it?"</string>
    <string name="metre">m</string>
    <string name="kilometre">km</string>
    <string name="loading">Loading ...</string>
    <string name="jaime">Like</string>
    <string name="jaimepas">Unlike</string>
    <string name="preference">Préférences</string>
    <string name="preference_desc">Veuillez vérifier vos informations.</string>
    <string name="preferences_saved">Préférences enregistées !</string>
    <string name="commentaire_">Commentaire(s) :</string>

    <!-- categories activity-->
    <string name="categories_saved">Catégories enregistées !</string>
    <string name="no_category_selected">Aucune catégorie selectionnée !</string>
    <string name="no_category_selected_desc">Aucune catégorie selectionnée, seule la catégorie
        par default sera affichée voulez vous continuer ?</string>

    <!-- Text Colors -->
    <color name="normal_text_color">#063040</color>
    <color name="normal_text_clear_color">#0F6878</color>

    <color name="blue">#0F6878</color>
    <color name="marron">#432918</color>
    <color name="white">#ffffff</color>
    <color name="background">#DEDEDE</color>

    <!-- Activity profil -->
    <string name="follow_me">Follow me</string>
    <string name="votre_commentaire">Votre commentaire</string>

    <!-- Activity catégories -->
    <string name="my_categories">Mes Catégories</string>
    <string name="my_informations">Mes informations</string>

    <!-- Connexion activity Text -->
    <string name="identifiant_">Login :</string>
    <string name="identifiant">Login</string>
    <string name="connexion">Connection</string>
    <string name="forgotPwd">Forgot password</string>
    <string name="no_network_available">No connection available !</string>
    <string name="no_network_available_desc">You do not have any connection try again later.</string>

    <!--Activity Timeline-->
    <string name="activity_timeline_title">Timeline</string>
    <string name="title_activity_mes_informations">MesInformationsActivity</string>

</resources>


