<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suricapp.views.ConnexionActivity"
    android:orientation="vertical"
    android:background="#DEDEDE">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:gravity="center_horizontal"
        android:src="@drawable/logo"
        android:paddingTop="30dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/identifiant_"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/normal_text_color"/>
        <EditText
            android:id="@+id/activity_connexion_identifiant"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/identifiant"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/normal_text_color"/>
        <EditText
            android:id="@+id/activity_connexion_mot_de_passe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"/>
    </LinearLayout>
    <Button
        android:id="@+id/activity_connexion_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textColor="@color/white"
        android:background="@color/normal_text_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>
    <TextView
        android:id="@+id/activity_connexion_inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/inscrivez_vous"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/activity_connexion_oubli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/forgotPwd"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
