<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#DEDEDE"
    android:weightSum="1">
    <LinearLayout
        android:id="@+id/activity_mes_informations_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/activity_mes_informations_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/bandeau4"/>
            <TextView
                android:id="@+id/txtViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_informations"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center"
                android:textSize="25sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/normal_text_color"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/activity_mes_informations_pseudo"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:hint="@string/pseudo"
                android:inputType="text"
                android:textStyle="bold"
                android:textColor="@color/normal_text_color"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/photo_"
                android:textStyle="bold"
                android:textColor="@color/normal_text_color"
                android:gravity="center"/>
            <Button
                android:id="@+id/activity_mes_informations_photo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/photo"
                android:textColor="#ffffff"
                android:background="@color/normal_text_color"
                android:onClick="setDate"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/activity_mes_informations_mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/normal_text_color"
                android:inputType="text"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/ville_"
                android:textStyle="bold"
                android:textColor="@color/normal_text_color"
                android:gravity="center"
                />
            <EditText
                android:id="@+id/activity_mes_informations_ville"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ville"
                android:inputType="text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/date_naissance_"
                android:textStyle="bold"
                android:textColor="@color/normal_text_color"
                android:gravity="center"/>
            <Button
                android:id="@+id/activity_mes_informations_date"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/date_naissance"
                android:textColor="#ffffff"
                android:background="@color/normal_text_color"
                android:onClick="setDate"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/mot_de_passe_"
                android:textStyle="bold"
                android:textColor="@color/normal_text_color"
                android:gravity="center"
                />
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/activity_mes_informations_password"
                android:inputType="textPassword"
                android:hint="@string/mot_de_passe"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_"
                android:textStyle="bold"
                android:textColor="@color/normal_text_color"
                android:gravity="center"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_mes_informations_confirmation"
                android:inputType="textPassword"
                android:hint="@string/confirmation"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/activity_mes_informations_suivant"
                android:layout_width="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_height="wrap_content"
                android:background="@color/normal_text_color"
                android:layout_gravity="center_horizontal"
                android:text="@string/send"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
