<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.suricapp.views.CategoriesActivity"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:src="@drawable/bandeau4"/>
                    <TextView
                        android:id="@+id/txtViewLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_categories"
                        android:textStyle="bold"
                        android:textColor="@color/blue"
                        android:gravity="center"
                        android:textSize="25sp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/normal_text_color"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_margin="5dp">
                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_horizontal"
                                    android:src="@drawable/categ_transport"/>
                                <CheckBox
                                    android:id="@+id/activity_categories_categorie_transport"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"/>
                                <TextView
                                    android:text="@string/transport"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:textSize="17sp"
                                    android:layout_gravity="center"
                                    android:textColor="@color/normal_text_clear_color"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_margin="5dp">
                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_horizontal"
                                    android:src="@drawable/categ_evenement"/>
                                <CheckBox
                                    android:id="@+id/activity_categories_categorie_evenement"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"/>
                                <TextView
                                    android:text="@string/evenement"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:textSize="17sp"
                                    android:layout_gravity="center"
                                    android:textColor="@color/normal_text_clear_color"/>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_margin="5dp">
                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_horizontal"
                                    android:src="@drawable/categ_promotion"/>
                                <CheckBox
                                    android:id="@+id/activity_categories_categorie_promotion"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"/>
                                <TextView
                                    android:text="@string/promotion"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:textSize="17sp"
                                    android:layout_gravity="center"
                                    android:textColor="@color/normal_text_clear_color"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_margin="5dp">
                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_horizontal"
                                    android:src="@drawable/categ_rencontre"/>
                                <CheckBox
                                    android:id="@+id/activity_categories_categorie_rencontre"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"/>
                                <TextView
                                    android:text="@string/rencontre"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:textSize="17sp"
                                    android:layout_gravity="center"
                                    android:textColor="@color/normal_text_clear_color"/>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_margin="5dp">
                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_horizontal"
                                    android:src="@drawable/categ_covoiturage"/>
                                <CheckBox
                                    android:id="@+id/activity_categories_categorie_covoiturage"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"/>
                                <TextView
                                    android:text="@string/co_voiturage"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:textSize="17sp"
                                    android:layout_gravity="center"
                                    android:textColor="@color/normal_text_clear_color"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_margin="5dp">
                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center_horizontal"
                                    android:src="@drawable/categ_autorites"/>
                                <CheckBox
                                    android:id="@+id/activity_categories_categorie_autorites"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"/>
                                <TextView
                                    android:text="@string/autorites"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:textSize="17sp"
                                    android:layout_gravity="center"
                                    android:textColor="@color/normal_text_clear_color"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_message_around"
                        android:textStyle="bold"
                        android:textColor="@color/normal_text_color"
                        android:gravity="left"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"/>
                    <SeekBar
                        android:id="@+id/activity_inscription_2rayon"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10"
                        android:progress="5"
                        android:layout_marginTop="10dp"
                        />
                    <TextView
                        android:id="@+id/rayon_texte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/activity_categories_envoyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="40dp"/>
        </RelativeLayout>
</LinearLayout>
